k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gms-task
  namespace: default
  labels:
    app.kubernetes.io/name: gms-app
    app: gms-app

spec:
  replicas: 2
  selector:
    matchLabels:
      app: gms-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gms-app
        app: gms-app
    spec:
      containers:
      - name: app
        imagePullPolicy: IfNotPresent
        image: gms-task
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 1
          failureThreshold: 2
