k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gms-task
spec:
  selector:
    app.kubernetes.io/name: gms-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
