k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gms-task
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  - http:
      paths:
      # - pathType: ImplementationSpecific
      #   path: /app(/|$)(.*)
      #   backend:
      #     service:
      #       name: gms-task
      #       port:
      #         number: 3000
      - pathType: ImplementationSpecific
        path:  /(.*)
        backend:
          service:
            name: gms-task
            port:
              number: 3000
